# zk-apps

./: .gitignore  .gitmodules  Cargo.toml  README.md  rust-toolchain.toml  setup_shielding.sh
.github/workflows/: checks.yml  integration_tests.yml
circuit_runner/: Cargo.toml
circuit_runner/examples/: square.rs
circuit_runner/src/: lib.rs
cli/: deposit.pk.bytes  shielder-metadata.json
cli/src/: app_state.rs  config.rs  contract.rs  deposit.rs  main.rs  state_file.rs  withdraw.rs
contract/: Cargo.toml
contract/src/: contract.rs
legacy-shielder/: Makefile
legacy-shielder/cli/: README.md
legacy-shielder/cli/src/: app_state.rs  lib.rs  state_file.rs  withdraw.rs
legacy-shielder/cli/tests/psp22/: mod.rs
legacy-shielder/contract/src/: error.rs
legacy-shielder/deploy/: deploy.sh
legacy-shielder/public_token/: lib.rs
relations/: Cargo.toml
relations/src/: account.rs  hasher.rs  lib.rs  merkle_proof.rs  note.rs  operation.rs  proof.rs
relations/src/relations/: mod.rs  update_account.rs  update_note.rs
relations/src/tests/: account.rs  mod.rs  operation.rs  proof.rs
relations/src/tests/relations/: update_account.rs  update_note.rs
shielder/: Cargo.toml  Makefile  README.md  deposit_and_merge.vk.bytes  rust-toolchain.toml  setup_shielding.sh  withdraw.vk.bytes
shielder/cli/: Cargo.toml  README.md  shielder-metadata.json
shielder/cli/src/: app_state.rs  config.rs  contract.rs  deposit.rs  ink_contract.rs  lib.rs  main.rs  merge.rs  withdraw.rs
shielder/cli/tests/: integration_tests.rs  setup_local.sh
shielder/cli/tests/shielder_wrapper/: mod.rs
shielder/cli/tests/utils/: mod.rs
shielder/contract/: Cargo.toml  errors.rs  lib.rs  merkle.rs  mocked_zk.rs  psp22.rs  types.rs
shielder/contract/drink_tests/: mod.rs
shielder/contract/drink_tests/utils/: chain.rs  mod.rs  ops.rs  psp22.rs  shielder.rs
shielder/contract/mocked_zk/: account.rs  merkle.rs  mod.rs  note.rs  ops.rs  relations.rs  tests.rs  traits.rs
shielder/contract/mocked_zk/tests/: merkle.rs  mod.rs
shielder/contract/src/: contract.rs  error.rs  lib.rs
shielder/contract/test/: mod.rs
shielder/contract/test/utils/: chain.rs  ops.rs  shielder.rs
shielder/contract/test_utils/: merkle.rs
shielder/contract/tests/: mod.rs
shielder/contract/traits/: mod.rs  psp22.rs
shielder/contract/types/: mod.rs  op_pub.rs
shielder/deploy/: deploy-native.sh  deploy.sh  docker-compose.yml
shielder/drink_tests/: Cargo.toml
shielder/drink_tests/src/: lib.rs
shielder/drink_tests/src/utils/: chain.rs  ops.rs  psp22.rs  shielder.rs
shielder/mocked_zk/: Cargo.toml
shielder/mocked_zk/src/: account.rs  errors.rs  lib.rs  note.rs  ops.rs  relations.rs  scalar.rs  tests.rs  traits.rs
shielder/public_token/: Cargo.toml
shielder/relations/: Cargo.toml  README.md
shielder/relations/src/: account.rs  merkle_proof.rs  operation.rs
shielder/relations/src/relations/: update_account.rs
shielder/tests/: Cargo.toml  setup_local.sh
shielder/tests/src/: lib.rs  psp22.rs  shielder.rs  test_context.rs
