[package]
name = "circuit_runner"
version = "0.0.0"
edition = "2021"
authors = ["Cardinal"]
documentation = "https://docs.rs/?"
homepage = "https://alephzero.org"
license = "Apache-2.0"
categories = ["cryptography"]
keywords = ["cryptography", "snark", "zero-knowledge", "liminal", "shielder"]
repository = "https://github.com/Cardinal-Cryptography/zk-apps"
description = "A collection of halo2-based relations for use in liminal."

[dependencies]
rand = "=0.8"
serde = { version = "=1.0", default-features = false, features = ["derive"] }
serde_json = "=1.0"

halo2-base =  { git = "https://github.com/axiom-crypto/halo2-lib", branch = "community-edition" }
snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier.git", branch = "community-edition" }

# For measuring performance
ark-std = { version = "=0.4.0", features = ["print-trace"] }