[package]
name = "liminal-halo2-relations"
version = "0.0.0"
edition = "2021"
authors = ["Cardinal"]
documentation = "https://docs.rs/?"
homepage = "https://alephzero.org"
license = "Apache-2.0"
categories = ["cryptography"]
keywords = ["cryptography", "snark", "zero-knowledge", "liminal", "shielder"]
repository = "https://github.com/Cardinal-Cryptography/zk-apps"
description = "A collection of halo2-based relations for use in liminal."

[dependencies]
rand = "=0.8"
serde = { version = "=1.0", default-features = false, features = ["derive"] }
serde_json = "=1.0"

halo2-base = { git = "https://github.com/Cardinal-Cryptography/halo2-lib", branch = "aleph" }


#[dev-dependencies]
# Fork with halo2curves = 0.6 to match the version of halo2-base
poseidon = { git = "https://github.com/zemse/pse-poseidon" }

pprof = { version = "0.13", features = ["criterion", "flamegraph"] }
criterion = "0.5.1"
criterion-macro = "0.4"

ark-std = { version = "0.4.0", features = ["print-trace"] }
test-case = "3.3.1"
test-log = "0.2.14"
env_logger = "0.11.1"
proptest = "1.4.0"

#[[bench]]
#name = "bench"
#harness = false
