[workspace]
resolver = "2"

members = [
    "mocked_zk",
    "relations",
]

exclude = [
    "contract", # neither `cargo-contract` nor `drink` works well with workspaces
    "PSP22",
]

[workspace.package]
authors = ["Cardinal"]
edition = "2021"
homepage = "https://github.com/Cardinal-Cryptography/zk-apps"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Cardinal-Cryptography/zk-apps"
version = "0.1.0"

[workspace.dependencies]
anyhow = { version = "1.0.79", default-features = false }
drink = { version = "0.16.0" }
halo2-base = { package = "halo2-base", git = "https://github.com/Cardinal-Cryptography/halo2-lib", branch = "aleph" }
ink = { version = "5.0.0", default-features = false }
poseidon = { git = "https://github.com/zemse/pse-poseidon" }
rand = { version = "=0.8" }
serde = { version = "=1.0", default-features = false }
serde_json = { version = "=1.0" }


liminal-halo2-relations = { path = "relations", version = "=0.1.0" }
mocked_zk = { path = "mocked_zk", version = "=0.1.0", default-features = false }
shielder-contract = { path = "contract", version = "=0.1.0", features = ["ink-as-dependency"] }
