[package]
name = "shielder-cli"
version = "0.1.0"
edition = "2021"
authors = ["Cardinal Cryptography"]

[lib]
name = "shielder"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
clap = { version = "4.0", features = ["derive"] }
scale = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
inquire = "0.5.2"
itertools = "0.10.5"
rand = "0.8.5"
rust-argon2 = "1.0.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
shellexpand = "2.1.2"
zeroize = "1.5.7"
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["fmt", "json", "env-filter"] }

ark-bls12-381 = { version = "^0.3.0" }
ark-crypto-primitives = { version = "^0.3.0", default-features = true, features = [ "r1cs" ] }
ark-ec = { version = "^0.3.0", default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
ark-groth16 = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false }
ark-snark = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }

# todo: change this for versioned `aleph-client` right away after publishing it
aleph_client = { git = "https://github.com/Cardinal-Cryptography/aleph-node.git", rev = "r-10.0" }
liminal-ark-relations = "0.4.0"

ink-wrapper-types = { git = "https://github.com/Cardinal-Cryptography/ink-wrapper/" }
ink_primitives = "4.0.1"

[dev-dependencies]
serial_test = "1.0.0"
