[package]
name = "shielder-contract"
version = "0.1.0"
authors = ["Cardinal"]
homepage = "https://alephzero.org"
repository = "https://github.com/Cardinal-Cryptography/zk-apps"
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
mocked_zk = { path = "../mocked_zk", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "mocked_zk/std",
]
ink-as-dependency = []
e2e-tests = []
