[package]
name = "shielder-contract"
version = "0.1.0"
authors = ["Cardinal"]
homepage = "https://alephzero.org"
repository = "https://github.com/Cardinal-Cryptography/zk-apps"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
ink = { workspace = true }
mocked_zk = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
drink = { workspace = true }
rand = { workspace = true }

[features]
default = ["std"]
std = [
    "ink/std",
    "mocked_zk/std",
]
ink-as-dependency = []
