[package]
name = "shielder-contract"
version = "0.1.0"
authors = ["Cardinal"]
homepage = "https://alephzero.org"
repository = "https://github.com/Cardinal-Cryptography/zk-apps"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
ink = { version = "5.0.0", default-features = false }
mocked_zk = { path = "../mocked_zk", default-features = false }

[dev-dependencies]
anyhow = { version = "1.0.79", default-features = false }
drink = { version = "0.16.0" }
rand = { version = "=0.8" }

[features]
default = ["std"]
std = [
    "ink/std",
    "mocked_zk/std",
]
ink-as-dependency = []
