[package]
name = "mocked_zk"
authors.workspace = true
documentation = "https://docs.rs/?"
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ink = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
