[package]
name = "tests"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
anyhow = "1.0.69"
tokio = { version = "1.21.2", features = ["full"] }
aleph_client = { git = "https://github.com/Cardinal-Cryptography/aleph-node", branch = "update-aleph-client" }
shielder = { path = "../contract", default-features = false }
public_token = { path = "../public_token", default-features = false  }
hex = "0.4.3"
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }